Add nectar-dashboard django1 job
The default py36 job is now Django 2.

Change-Id: Ib4f0bd6bb6a4814260686bc34b543bffb1c7e4b3

--- a/python.yaml
+++ b/python.yaml
@@ -397,6 +397,12 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'py36'
+      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}'
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         ubuntu_release: 'bionic'
+         os_release: 'train'
+         environment: 'py36-dj1'
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
