Fix nectar-freshdesk CI jobs
Change-Id: I72e1a9b42840ad40d13d7289ca2382b32ae0ad2d

--- a/python.yaml
+++ b/python.yaml
@@ -879,11 +879,11 @@
 - project:
     name: nectar-freshdesk
     jobs:
-      - '{name}-os-tox-{environment}':
+      - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'py36'
-      - '{name}-os-tox-{environment}':
+      - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
