--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -921,7 +921,7 @@
 - job-template:
     name: '{name}-site-deploy'
     defaults: global
-    node: upgrader
+    node: internal
     quiet-period: 15
 
     parameters:
@@ -980,7 +980,7 @@
 - job-template:
     name: '{name}-r10k-deploy'
     defaults: global
-    node: upgrader
+    node: internal
 
     parameters:
       - string:
@@ -1042,7 +1042,7 @@
 - job-template:
     name: '{name}-r10k-cleanup'
     defaults: global
-    node: upgrader
+    node: internal
 
     parameters:
       - string:
@@ -1172,7 +1172,7 @@
 - job-template:
     name: '{name}-r10k-diff-catalog'
     defaults: global
-    node: upgrader
+    node: internal
     quiet-period: 30
 
     parameters:
