Add dummy job to verify debian branch changes
Change-Id: Ie3c5864d000ac36242362741ee43c13375372fd6

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -550,6 +550,51 @@
       - dummy
 
 - job-template:
+    name: '{name}-dummy-debian'
+    defaults: global
+    node: openstack
+
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+          default: refs/heads/master
+          description: "The default branch to test."
+
+    triggers:
+      - gerrit:
+          trigger-on:
+              - patchset-created-event
+              - comment-added-contains-event:
+                   comment-contains-value: 'recheck'
+          projects:
+            - project-compare-type: 'PLAIN'
+              project-pattern: '{organisation}/{name}'
+              branches:
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'debian'
+                - branch-compare-type: 'REG_EXP'
+                  branch-pattern: 'debian/.*'
+          silent: false
+          escape-quotes: true
+          trigger-for-unreviewed-patches: true
+
+    scm:
+      - git:
+         url: ssh://jenkins@review.rc.nectar.org.au:29418/{organisation}/{name}.git
+         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
+         refspec: $GERRIT_REFSPEC
+         branches:
+          - origin/$GERRIT_BRANCH
+         skip-tag: true
+         wipe-workspace: false
+         clean:
+           after: true
+         choosing-strategy: gerrit
+
+    builders:
+      - dummy
+
+- job-template:
     name: '{name}-markdown'
     defaults: global
     node: openstack
