Still need xenial deb for nectar-metrics
Change-Id: I17798367ef6b9f8ce9165b80aceb7cf2a8c572f3

--- a/python.yaml
+++ b/python.yaml
@@ -105,6 +105,9 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
+      - '{name}-xenial-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
       - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
