Add octavia check
Change-Id: Id84bff53feb1ba1fed96e16517924e277519b007

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -570,6 +570,12 @@
          whitelist: 'heat'
 
 - project:
+    name: octavia
+    jobs:
+      - 'tempest-{name}-check':
+         whitelist: 'octavia'
+
+- project:
     name: heat-scenario-rctest
     jobs:
       - 'tempest-{name}-check-{site}':
