--- a/python.yaml
+++ b/python.yaml
@@ -904,3 +904,13 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
+
+- project:
+    name: python-orcid
+    jobs:
+      - '{name}-bionic-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-dummy':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
