Run functional tests for octavia
Change-Id: Ie5b2f0b7b81c2aace067796dd89b24b7d331e66e

--- a/python.yaml
+++ b/python.yaml
@@ -465,6 +465,10 @@
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+         environment: 'functional'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'pep8'
       - '{name}-os-deb-package':
          access: 'anonymous'
