Trigger the telemetry cleanup job
Change-Id: I56f23eb3558d5850a27f22eec00675c5e6985f53

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -1297,6 +1297,9 @@
           timeout: 5
           fail: true
 
+    triggers:
+      - timed: '30 3 * * *'
+
     builders:
       - shell: |
           . /opt/tempest/bin/activate
