Fix the yaml-lint check when spaces in filename
If spaces are in file name, the yaml-lint check will fail like:
" File ./data/OpenStack does not exist
  File Nova.yaml does not exist "

Change-Id: Ibe85df21685b7575322bc4993a61f024f2e9af58

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -200,7 +200,7 @@
           mkdir -p /tmp/yamls
           export GEM_HOME=/tmp/yamls
           gem install --no-ri --no-rdoc yaml-lint
-          find . -type f -iname "*.yml" -o -iname "*.yaml" -o -iname "*.eyaml" | xargs /tmp/yamls/bin/yaml-lint
+          find . -type f -iname "*.yml" -o -iname "*.yaml" -o -iname "*.eyaml" | xargs -d '\n' /tmp/yamls/bin/yaml-lint
 
 - builder:
     name: 'dummy'
