Create parent job to trigger all rctest nightly jobs
This replaces the upgrade job. Need to do it this way as
some jobs aren't so easy to set up a cron trigger

Change-Id: I04b005986ec7151a3d169ea70b8f948fcf6a9011

--- a/infrastructure.yaml
+++ b/infrastructure.yaml
@@ -1,15 +1,13 @@
 
 - job:
-    name: testcloud-upgrade
+    name: testcloud-test-trigger
     description: |
-        Configuration for this job is stored in the Hivemind config file on
-        <b>jenkins-upgrader.mgmt.rc.nectar.org.au</b> at
-        <b>/var/lib/jenkins/.hivemind/hivemind/config.py</b>
+        Parent job to trigger all tempest rctest jobs
     defaults: global
-    node: upgrader
+    node: internal
     concurrent: false
     builders:
-      - shell: 'hivemind -R test-cloud upgrade.upgrade --unattended'
+      - shell: '/bin/true'
     triggers:
       - timed: "@midnight"
     publishers:
