--- a/tempest.yaml
+++ b/tempest.yaml
@@ -576,6 +576,16 @@
          whitelist: 'octavia'
 
 - project:
+    name: octavia-smoke-rctest
+    jobs:
+      - 'tempest-{name}-check-{site}':
+         job: 'octavia-smoke'
+         whitelist: 'octavia'
+         cloud: 'testing'
+         site:
+           - coreservices
+
+- project:
     name: heat-scenario-rctest
     jobs:
       - 'tempest-{name}-check-{site}':
@@ -688,62 +698,6 @@
             - testing
             - development
           description: "Cloud to run tempest on (Production, Test, Dev). Leave as Production if unsure."
-    properties:
-      - authorization:
-          'nobody':
-            - job-read
-            - job-discover
-
-
-- job:
-    name: tempest-lbaas-check
-    defaults: global
-    node: tempest
-    concurrent: true
-    scm:
-      - git:
-         url: ssh://review.rc.nectar.org.au:29418/internal/nectar-testing.git
-         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
-    builders:
-      - shell: |
-          #!/bin/bash
-          . /opt/tempest/bin/activate
-          tmpdir=`mktemp -d --suffix=_tempest`
-          cd $WORKSPACE/tempest/
-          ./setup_tempest.py -s $AVAILABILITY_ZONE -e $CLOUD -j check-scenario $tmpdir
-          cd $tmpdir
-          stestr run -n neutron_lbaas.tests.tempest.v2.scenario.test_load_balancer_basic.TestLoadBalancerBasic.test_load_balancer_basic 2>&1 | grep --line-buffered -vE ' \w+Warning: |self._sock = None'
-          RET=${PIPESTATUS[0]}
-          rm -rf $tmpdir
-          exit $RET
-    parameters:
-      - choice:
-          name: 'CLOUD'
-          choices:
-            - production
-            - testing
-            - development
-          description: "Cloud to run tempest on (Production, Test, Dev). Leave as Production if unsure."
-      - choice:
-          name: 'AVAILABILITY_ZONE'
-          choices:
-            - auckland
-            - intersect-01
-            - melbourne-qh2
-            - melbourne-qh2-uom
-            - monash-01
-            - monash-02
-            - monash-03
-            - nci
-            - qld
-            - swinburne-01
-            - tasmania
-            - tasmania-s
-            - coreservices
-            - qh2-test
-            - lani
-            - luna
-          description: 'Availability zone.'
     properties:
       - authorization:
           'nobody':
