Build focal packages on bionic since no hivemind on focal hosts
Change-Id: I9b18a8f3b1b02c1c1fbcdb6ac9b8ceb514419463

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -190,7 +190,7 @@
 - job-template:
     name: '{name}-focal-deb-package'
     defaults: global
-    node: focal-ussuri
+    node: bionic-train
 
     parameters:
       - string:
