--- a/tempest.yaml
+++ b/tempest.yaml
@@ -341,7 +341,7 @@
           . /opt/tempest/bin/activate
           tmpdir=`mktemp -d --suffix=_tempest`
           cd $WORKSPACE/tempest/
-          ./setup_tempest.py -e $CLOUD -j check-scenario $tmpdir
+          ./setup_tempest.py -e $CLOUD -s $AVAILABILITY_ZONE -j check-scenario $tmpdir
           cd $tmpdir
           stestr run --serial --whitelist-file $WORKSPACE/tempest/whitelists/check-neutron.yaml 2>&1 | grep --line-buffered -vE ' \w+Warning: |self._sock = None'
           RET=${PIPESTATUS[0]}
@@ -355,6 +355,26 @@
             - testing
             - development
           description: "Cloud to run tempest on (production, testing or development). Leave as Production if unsure."
+      - choice:
+          name: 'AVAILABILITY_ZONE'
+          choices:
+            - auckland
+            - intersect-01
+            - melbourne-qh2
+            - melbourne-qh2-uom
+            - monash-01
+            - monash-02
+            - monash-03
+            - nci
+            - qld
+            - swinburne-01
+            - tasmania
+            - tasmania-s
+            - coreservices
+            - qh2-test
+            - lani
+            - luna
+          description: 'Availability zone.'
     properties:
       - authorization:
           'nobody':
