Test tempest project on focal now
Change-Id: I044f209cc974cd964beb058f32581642c2e80657

--- a/python.yaml
+++ b/python.yaml
@@ -737,11 +737,11 @@
 - project:
     name: tempest
     jobs:
-      - '{name}-bionic-tox-{environment}':
+      - '{name}-focal-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'py36'
-      - '{name}-bionic-tox-{environment}':
+         environment: 'py38'
+      - '{name}-focal-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
