--- a/tox.yaml
+++ b/tox.yaml
@@ -256,3 +256,64 @@
       - cobertura:
           report-file: "cover/coverage.xml"
           targets: {}
+
+- job-template:
+    name: '{name}-focal-tox-{environment}'
+    defaults: global
+    node: 'focal-ussuri'
+
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+          default: refs/heads/master
+          description: "The default branch to test."
+
+    properties:
+      - authorization:
+          '{access}':
+            - job-read
+            - job-discover
+      - build-discarder:
+          num-to-keep: 20
+
+    triggers:
+      - gerrit:
+          trigger-on:
+              - patchset-created-event
+              - comment-added-contains-event:
+                   comment-contains-value: 'recheck'
+          projects:
+            - project-compare-type: 'PLAIN'
+              project-pattern: '{organisation}/{name}'
+              branches:
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'master'
+                - branch-compare-type: 'REG_EXP'
+                  branch-pattern: 'nectar/.*'
+                - branch-compare-type: 'REG_EXP'
+                  branch-pattern: 'uom/.*'
+          silent: false
+          escape-quotes: true
+          trigger-for-unreviewed-patches: true
+
+    scm:
+      - git:
+         url: ssh://jenkins@review.rc.nectar.org.au:29418/{organisation}/{name}.git
+         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
+         refspec: $GERRIT_REFSPEC
+         branches:
+          - origin/$GERRIT_BRANCH
+         skip-tag: true
+         wipe-workspace: false
+         clean:
+           after: true
+         choosing-strategy: gerrit
+
+    builders:
+      - python-tox:
+          environment: '{environment}'
+
+    publishers:
+      - cobertura:
+          report-file: "cover/coverage.xml"
+          targets: {}
