Temporarily add oldnova branch for ci
Change-Id: I7e3dba9dab07ffc2aea9433fa1b65f7197e3ac21

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -25,6 +25,8 @@
                   branch-pattern: 'production'
                 - branch-compare-type: 'REG_EXP'
                   branch-pattern: 'nectar/.*'
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'oldnova'
           silent: false
           escape-quotes: true
           trigger-for-unreviewed-patches: true
