Add focal ussuri tox jobs
Change-Id: I1403afa9b0e1fd7e27df69bcc4ef6d8dcb59dca2

--- a/tox.yaml
+++ b/tox.yaml
@@ -16,6 +16,9 @@
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'bionic'
             os_release: 'train'
+      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
+            ubuntu_release: 'focal'
+            os_release: 'ussuri'
 
 
 - job-template:
