move puppet-nectar from NeCTAR-RC to internal
puppet-nectar holds profiles that defines how software are put together
and run on Nectar nodes. Although this is not configuration data or
sensitive credentials, having such information in public domain means an
attacker has the opportunity to derive attack vectors from this
knowledge.

We have publicised this information previously because we hope having
our roles/profiles in public might help other sites. The world has moved
on since then; most new deployments now use kolla-ansible, and mature
sites already have their own roles/profiles.

Change-Id: I788dbae00358e0a08b7875ca5f866f21cd600631

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -345,11 +345,11 @@
     name: puppet-nectar
     jobs:
       - '{name}-puppet-unit':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
+         access: 'nobody'
+         organisation: 'internal'
       - '{name}-puppet-prod-review':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
+         access: 'nobody'
+         organisation: 'internal'
 
 - project:
     name: puppet-neutron
