Add manuka functional test job
Change-Id: I9ce49eca5896159fa157ccf300cb248a7cc5489e

--- a/python.yaml
+++ b/python.yaml
@@ -248,6 +248,10 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'cover'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'functional'
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
