Add pfup project
Change-Id: I8703da497360a363835fd66fbde3f9bc47f43461

--- a/python.yaml
+++ b/python.yaml
@@ -918,3 +918,11 @@
       - '{name}-dummy':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
+
+- project:
+    name: pfup
+    jobs:
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'flake8'
