Also verify production modules in librarian-verify
Change-Id: I9c00707c4702f58f64767ef747825d00a4d0b49a

--- a/other.yaml
+++ b/other.yaml
@@ -73,6 +73,8 @@
           export https_proxy=http://wwwproxy.unimelb.edu.au:8000
           cd testing
           librarian-puppet install --verbose --path ~/puppet-modules-cache/
+          cd ../production
+          librarian-puppet install --verbose --path ~/puppet-modules-cache/
 
     wrappers:
       - ssh-agent-credentials:
