Add trove mysql 5.7 bionic image
Change-Id: I856a5c47c1b731cad653351b65483dca8ac6bb77

--- a/images.yaml
+++ b/images.yaml
@@ -64,6 +64,11 @@
       - 'image-build-trove-{name}'
 
 - project:
+    name: mysql-5.7-ubuntu-18.04-x86_64
+    jobs:
+      - 'image-build-trove-{name}'
+
+- project:
     name: mysql-8.0-ubuntu-18.04-x86_64
     jobs:
       - 'image-build-trove-{name}'
