--- a/puppet.yaml
+++ b/puppet.yaml
@@ -582,12 +582,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-cloud'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-cloud'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -604,12 +607,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-cloud'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-cloud'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -626,12 +632,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -648,12 +657,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -670,12 +682,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -692,12 +707,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -714,12 +732,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-hpc'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-hpc'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
@@ -736,12 +757,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'tas-gerrit'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -758,12 +782,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'tas-gerrit'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -780,12 +807,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-hpc'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-hpc'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
@@ -802,12 +832,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -824,12 +857,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -846,12 +882,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -868,12 +907,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -890,12 +932,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -912,12 +957,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
+         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
