Ensure all puppet module deploy jobs can only be run 1 at a time
Change-Id: I3f1f7de7e3d2a8c8cc4fbf70eb1f7d330d985586

--- a/other.yaml
+++ b/other.yaml
@@ -165,6 +165,10 @@
           default: master
           description: "The default branch to test."
 
+    properties:
+      - lockable-resources:
+          resources: "puppet-library"
+
     triggers:
       - gerrit:
           trigger-on:
