--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1145,6 +1145,7 @@
 
     builders:
       - r10k-deploy
+          r10khost: '{r10khost}'
 
     wrappers:
       - ssh-agent-credentials:
@@ -1206,6 +1207,7 @@
 
     builders:
       - r10k-cleanup
+          r10khost: '{r10khost}'
 
     publishers:
       !include: publisher.yaml.inc
@@ -1340,6 +1342,7 @@
 
     builders:
       - r10k-diff-catalog-control-repo
+          r10khost: '{r10khost}'
 
     wrappers:
       - ssh-agent-credentials:
